frontend/test/should_fail/index_pattern_multiple_fromto_argument_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	n:N{multiple(Ni >= 42.0, Ni <= 44)};
	
	modify {
	}
}
